eck-test/eck/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: eck-ingress
  namespace: elastic-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-test
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - search.hayasha.store
        - kibana.hayasha.store
      secretName: eck-secret
  rules:
    - host: search.hayasha.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quickstart-es-http
                port:
                  number: 9200
    - host: kibana.hayasha.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quickstart-kb-http
                port:
                  number: 5601
    - host: fleet.hayasha.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:
